--- a/pipeline/vars.properties
+++ b/pipeline/vars.properties
@@ -1,4 +1,4 @@
-environment=nonprod
-token=s.6uu2TQLFKjZCyv3oEt7IcXqp
+environment=prod
+token=s.H6m1XoCabWO2okT6J6WmUFEn
 vaultuser=kevin
 vaultpass=ufdn12344
